# ai-blox-orchestrator

./: .env  .env.example  README.md  alembic.ini  pyproject.toml
aiblox_kb/: alembic.ini  pyproject.toml
aiblox_kb/aiblox_kb/: __init__.py  db.py  models.py  settings.py  tsquery.py
aiblox_kb/aiblox_kb/repos/: __init__.py  chunk_cache_repo.py  item_repo.py
aiblox_kb/alembic/: env.py
aiblox_kb/alembic/versions/: 20250101_000000_init.py
aiblox_orchestrator/: __init__.py  server.py
aiblox_orchestrator/chunker/: __init__.py  models.py  protocols.py  registry.py  simple_char_chunker.py  simple_token_chunker.py
aiblox_orchestrator/config/: settings.py
aiblox_orchestrator/evidence/: __init__.py  models.py  packer.py  protocols.py
aiblox_orchestrator/observability/: __init__.py  hooks.py
aiblox_orchestrator/orchestrator/: __init__.py  errors.py  interfaces.py  orchestrator.py  step_runner.py  stubs.py
aiblox_orchestrator/protocol/: __init__.py  context.py  event_sink.py  events.py  plans.py
aiblox_orchestrator/retriever/: __init__.py  embedder.py  hybrid_scorer.py  models.py  protocols.py  retriever.py  stub.py  tsquery.py
aiblox_orchestrator/router/: __init__.py  decision_router.py
aiblox_orchestrator/storage/: __init__.py  chunk_cache_repo.py  db.py  item_repo.py  models.py  repos.py
alembic/: env.py
alembic/versions/: 20250101_000000_init.py
docs/context/: 00-context.md  01-retriever.md  02-chunker.md  (+6 more)
tests/: test_chunker.py  test_evidence_packer.py  test_hybrid_scorer.py  test_orchestrator.py  test_retriever_models.py  test_tsquery.py
